--- a/index.html
+++ b/index.html
@@ -2,77 +2,29 @@
 <html lang="en">
     <meta charset="UTF-8">
     <head>
-        <body>
-            <script>
-                let result;
-                let playerSelection;
-                let rock_paper_scis = ['rock', 'paper', 'scissors'];
-                let computerSelection;
-                game(playRound);
-
-                function game(playRound)
-                {
-                    let computerCounter = 0;
-                    let playerCounter = 0;
-                    for (i = 0; i < 5; i++)
-                    {
-                        playerSelection = prompt("Choose your weapon: Rock/Paper/Scissors!").toLowerCase();
-                        computerSelection = rock_paper_scis[Math.floor(Math.random()*rock_paper_scis.length)];
-                        playRound(playerSelection, computerSelection);
-                        if (result === "tie")
-                        {
-                            computerCounter++;
-                            playerCounter++;
-                            console.log( `This round is a tie! The score is ${playerCounter}-${computerCounter} `);
-                        }
-                        else if (result === "win")
-                        {
-                            playerCounter++;
-                            console.log( `You won this round! The score is ${playerCounter}-${computerCounter} `);
-                        }
-                        else
-                        {
-                            computerCounter++;
-                            console.log( `You lose this round! The score is ${playerCounter}-${computerCounter} `);
-                        }
-                    }
-                    if (playerCounter > computerCounter)
-                    {
-                       console.log("Yay! You won the game!");
-                    }
-                    else if (playerCounter == computerCounter)
-                    {
-                        console.log("Semms like we have a tie! Odd, but can happen");
-                    }
-                    else
-                    {
-                        console.log("Oh no! seems like you lost the game.");
-                    }
-                }
-                function playRound(playerSelection, computerSelection)
-                {
-                    if (playerSelection === computerSelection)
-                    { 
-                        return result = "tie";
-                    }
-                    else if (playerSelection === "rock" && computerSelection === "paper")
-                    {
-                        return result = "lose";
-                    }
-                    else if (playerSelection === "paper" && computerSelection === "scissors")
-                    {
-                        return result = "lose";
-                    }
-                    else if (playerSelection === "scissors" && computerSelection === "rock")
-                    {
-                        return result = "lose";
-                    }
-                    else
-                    {
-                        return result = "win";
-                    }
-                }
-            </script>
-        </body>
+        <title>Rock-Paper-Scissors game</title>
+        <link rel="stylesheet" href="stylesheets/main.css">
     </head>
+        <div id="container">
+            <body>
+                <div class="header">
+                    <h1>Feeling lucky? Try yourself!</h1>
+                </div>
+                <div class="intro">
+                    <p>Play the rock-paper-scissors  game against
+                        the AI<br> <br>and see if you have what it takes to win!</p>
+                </div>
+                <div id="playerChoice">
+                    <button class="rock">Rock</button>
+                    <button class="paper">Paper</button>
+                    <button class="scissors">Scissors</button>
+                </div>
+
+                <div id="score">
+                    <p><span class="playerScore">0</span>-<span  class="aiScore">0</span></p>
+                </div>
+                <div><p class="aiChoice"></p></div>
+                <script type="text/javascript" src="script.js"></script>
+            </body>
+        </div>
 </html>
