new visuals added

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
     <meta charset="UTF-8">
     <head>
         <title>Rock-Paper-Scissors game</title>
-        <link rel="stylesheet" href="stylesheets/main.css">
+        <link rel="stylesheet" href="assets/main.css">
     </head>
         <div id="container">
             <body>
@@ -24,6 +24,9 @@
                     <p><span class="playerScore">0</span>-<span  class="aiScore">0</span></p>
                 </div>
                 <div><p class="aiChoice"></p></div>
+                <footer>
+                    <a href="https://github.com/sebastianlares92" class="icon"><img class="github" src="assets/images/githubLogo.png"></a> 
+                </footer>
                 <script type="text/javascript" src="script.js"></script>
             </body>
         </div>
